--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,8 @@ build = "build.rs"
 
 [dependencies]
 sixtyfps = "0.1.5"
+tokio = { version = "1.15.0", features = ["full"] }
+
 
 [build-dependencies]
 sixtyfps-build = "0.1.5"
