--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ build = "build.rs"
 [dependencies]
 sixtyfps = "0.1.5"
 tokio = { version = "1.15.0", features = ["full"] }
-
+futures = "0.3"
 
 [build-dependencies]
 sixtyfps-build = "0.1.5"
